# containerized-deployment-of-agents

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker-jupyter/: Dockerfile  requirements.txt
src/: app.py
src/agents/: agents.py  prompts.py  prompts_cn.py
src/utils/: openai_like.py  project_path.py
